--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
       <button id="save-button">save</button>
       <button id="remove-button">remove</button>
       <hr />
-      <ul>
-        <li>
-          step1
-        </li>
-      </ul>
+      <div class="display-list">
+        <ul class="ul-left">
+          <li>
+            numbery
+          </li>
+        </ul>
+        <ul class="ul-right">
+          <li>
+            nany
+          </li>
+        </ul>
+      </div>
       <hr />
       <button id="reset-button">reset</button>
     </section>
