Completed init state of the webpage
Init function to render the intial state of the webpage, minor changes to html and css to proper display

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Numbery and NaNy</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./data/entries.js"></script>
+    <script src="./log.js"></script>
+    <script src="./init.js"></script>
+    <script src="./renderlist.js"></script>
   </head>
 
   <body>
@@ -13,12 +17,12 @@
       <button id="remove-button">remove</button>
       <hr />
       <div class="display-list">
-        <ul class="ul-left">
+        <ul id="numbery">
           <li>
             numbery
           </li>
         </ul>
-        <ul class="ul-right">
+        <ul id="nany">
           <li>
             nany
           </li>
