--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="./log.js"></script>
     <script src="./init.js"></script>
     <script src="./renderlist.js"></script>
+    <script src="./hasduplicates.js"></script>
+
+    <script src="./handlers/save-button.js"></script>
   </head>
 
   <body>
@@ -31,5 +34,6 @@
       <hr />
       <button id="reset-button">reset</button>
     </section>
+    <script src="./listeners/save-button.js"></script>
   </body>
 </html>
