Completed remove button functionality
Created listener and handler for remove button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./hasduplicates.js"></script>
 
     <script src="./handlers/save-button.js"></script>
+    <script src="./handlers/remove.js"></script>
   </head>
 
   <body>
@@ -35,5 +36,6 @@
       <button id="reset-button">reset</button>
     </section>
     <script src="./listeners/save-button.js"></script>
+    <script src="./listeners/remove.js"></script>
   </body>
 </html>
