Completed reset button funtionality
Reset state to initial values, minor changes in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="./handlers/save-button.js"></script>
     <script src="./handlers/remove.js"></script>
+    <script src="./handlers/reset.js"></script>
   </head>
 
   <body>
@@ -37,5 +38,6 @@
     </section>
     <script src="./listeners/save-button.js"></script>
     <script src="./listeners/remove.js"></script>
+    <script src="./listeners/reset.js"></script>
   </body>
 </html>
